feat: implementar validações e melhorias nas classes de reserva e validação